# proyecto-1

./: .gitignore  CMakeLists.txt  README.md  documentacion.md  hash.txt  informe.md
.github/workflows/: c-cpp.yml  release.yml
BPlusTree/: BPlusTree.h  csv_lector.h  healthcare-dataset-stroke-data.csv  main.cpp  register.h  text.txt  xd.cpp
ExtendibleHash/: ExtendibleHash.h  main.cpp  register.h
doc/: .gitignore  benchmark.sh  hotel.sql  table.r  volcano.sql
pkg/: CMakeLists.txt
pkg/arch/: .gitignore  PKGBUILD
pkg/ubuntu/: CMakeLists.txt  CPackConfig.cmake.in
src/: CMakeLists.txt  args.cpp  args.hpp  benchmark.cpp  benchmark.hpp  completion.cpp  completion.hpp  index.hpp  io_data.cpp  io_data.hpp  lexer.l  literal.cpp  literal.hpp  main.cpp  overload.hpp  parser.y  parser_def.h  statement.hpp  table.cpp  table.hpp  tree.c  tree.h
src/index/: CMakeLists.txt  bptree.cpp  bptree.hpp  extendible_hash.cpp  extendible_hash.hpp  isam.cpp  isam.hpp
src/statement/: CMakeLists.txt  abstract.hpp  copy.cpp  copy.hpp  create_index.cpp  create_index.hpp  create_table.cpp  create_table.hpp  delete_from.cpp  delete_from.hpp  expression.cpp  expression.hpp  insert.cpp  insert.hpp  literal.cpp  literal.hpp  row.cpp  row.hpp  select.cpp  select.hpp  statement.cpp  statement.hpp  type.cpp  type.hpp
src/test/: CMakeLists.txt  main.cpp
src/tree/: CMakeLists.txt  columns.c  columns.h  data_list.c  data_list.h  expresion.c  expresion.h  insert_values.c  insert_values.h  literal.c  literal.h  name_type.c  name_type.h  new_columns.c  new_columns.h  statement.c  statement.h  type.c  type.h
